[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_37.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_13.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_25.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/TouchButton.gd" type="Script" id=4]
[ext_resource path="res://src/UserInterface/TouchControl.gd" type="Script" id=5]

[node name="Control" type="Control"]
anchor_top = -0.00185185
anchor_right = 1.0
anchor_bottom = 0.998148
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
rect_min_size = Vector2( 1820, 980 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftRight" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -300.0
margin_right = 604.0
rect_min_size = Vector2( 700, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Control" parent="LeftRight"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )

[node name="Left" type="TouchScreenButton" parent="LeftRight/Left"]
scale = Vector2( 2, 2 )
normal = ExtResource( 3 )
passby_press = true
action = "move_left"
script = ExtResource( 4 )

[node name="Control" type="Control" parent="LeftRight"]
margin_left = 304.0
margin_right = 404.0
margin_bottom = 300.0
rect_min_size = Vector2( 100, 300 )

[node name="Right" type="Control" parent="LeftRight"]
margin_left = 408.0
margin_right = 708.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )

[node name="Right" type="TouchScreenButton" parent="LeftRight/Right"]
position = Vector2( -4, 0 )
scale = Vector2( 2, 2 )
normal = ExtResource( 2 )
passby_press = true
action = "move_right"
script = ExtResource( 4 )

[node name="Jump" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -300.0
rect_min_size = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="TouchScreenButton" parent="Jump"]
scale = Vector2( 2, 2 )
normal = ExtResource( 1 )
passby_press = true
action = "jump"
script = ExtResource( 4 )
[connection signal="pressed" from="LeftRight/Left/Left" to="LeftRight/Left/Left" method="_on_Left_pressed"]
[connection signal="released" from="LeftRight/Left/Left" to="LeftRight/Left/Left" method="_on_Left_released"]
[connection signal="pressed" from="LeftRight/Right/Right" to="LeftRight/Right/Right" method="_on_Right_pressed"]
[connection signal="released" from="LeftRight/Right/Right" to="LeftRight/Right/Right" method="_on_Right_released"]
[connection signal="pressed" from="Jump/Jump" to="Jump/Jump" method="_on_Jump_pressed"]
[connection signal="released" from="Jump/Jump" to="Jump/Jump" method="_on_Jump_released"]
